--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/breeze": "^1.25",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "yoeunes/toastr": "^2.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -22,6 +23,9 @@
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
+        "files":[
+            "app/Helper/helpers.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
