--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.8",
         "srmklive/paypal": "~3.0",
         "stripe/stripe-php": "^13.4",
+        "timehunter/laravel-google-recaptcha-v3": "~2.5",
         "yajra/laravel-datatables": "^10.1",
         "yoeunes/toastr": "^2.3"
     },
